# LZ-compressor

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lz  main.cc
BitOperator/: BitReader.cc  BitReader.h  BitWriter.cc  BitWriter.h
HuffmanCodec/: HuffmanDecoder.cc  HuffmanDecoder.h  HuffmanEncoder.cc  HuffmanEncoder.h
tools/: checker.h  debug.h  utilities.cc  utilities.h
